welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:3: error: '(' expected but identifier found.
		if die1 == 6 return die1 + 1
                   ^withoutDoubles:5: error: illegal start of simple expression
	}
        ^